--- a/libs/netcdf/4.7.4-intelmpi2017-4/README.org
+++ b/libs/netcdf/4.7.4-intelmpi2017-4/README.org
@@ -44,7 +44,7 @@ make install
 cd ../
 #+END_SRC
 ** netcdf-fortran
-It is recommended to complete the steps in [[Setup module files]] before proceeding (other wise you will need to set some of the env vars used here manually).
+It is recommended to complete the steps in [[*Setup module files][Setup module files]] before proceeding (other wise you will need to set some of the env vars used here manually).
 * Configure
 ** Setup module files
 If you have not done so already create the directory ~/sw/modules/my_mods where
