testing link to ac file on github

--- a/DFT/abinit/8.10.3-intelmpi2017-4/README.org
+++ b/DFT/abinit/8.10.3-intelmpi2017-4/README.org
@@ -33,7 +33,7 @@ module load intel/compiler/2017-4 intel/mpi/2017-4 intel/mkl/2017-4 lib/hdf5/1.1
 #+END_SRC
 * Compile
 
-Copy [the configure.ac file in this directory] to the directory where you have
+Copy [[file:./FI_intel2017.ac][the configure.ac file in this directory]] to the directory where you have
 extracted the abinit source code.
 
 
